Fixed vertical alignment of user info.

--- a/src/main/webapp/static/css/style.css
+++ b/src/main/webapp/static/css/style.css
@@ -374,7 +374,6 @@ div#fooTime {
 
 div.userButton {
     height: 100%;
-    vertical-align: middle;
 }
 
 .graph {
